tests/dfrouter/errors/detector_files/false_detectors_file3_deprecated/errors.dfrouter
Warning: Please note that using ';' as list separator is deprecated and not accepted anymore.
Error: Could not open detector file 'xxx.det.xml;input_messstrecke.det.xml;xxx.det.xml'
Quitting (on error).
